Edit: Filter & sort model findings

--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -72,9 +72,15 @@ To narrow down the findings, you can apply some filters:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model findings.
 
-2. Click **{{< fa filter >}} Filter**.
+2. Select a finding type[^7] to view from the tabs:
 
-3. On the **Select Your Filters** dialog that opens, enter your filtering criteria.[^7]
+   - Validation Issues
+   - Policy Exception
+   - Model Limitation
+
+3. Click **{{< fa filter >}} Filter**.
+
+4. On the **Select Your Filters** dialog that opens, enter your filtering criteria.[^8]
 
    For example, to filter by open findings for the Customer Churn Model assigned to Jane Doe:
 
@@ -82,7 +88,7 @@ To narrow down the findings, you can apply some filters:
       - **[model inventory]{.smallcaps}** — `Customer Churn Model`
       - **[assigned to]{.smallcaps}** — `Jane Doe`
 
-4. Click **Apply Filters**.
+5. Click **Apply Filters**.
 
 Filters can be removed by clicking on the {{< fa xmark >}} next to them on the main **{{< fa triangle-exclamation >}} Findings** page where the results are displayed.
 
@@ -100,9 +106,9 @@ Customize what is displayed on your list of all model findings:
 
    - Search for a column name in the list to narrow down results.
    - Toggle visibility for each item and drag each option to change the order.
-   - Available columns are determined by your model finding fields.[^8]
+   - Available columns are determined by your model finding fields.[^9]
 
-Once customized, you can save a view for later application.[^9]
+Once customized, you can save a view for later application.[^10]
 
 ### Manage custom findings views
 
@@ -116,9 +122,9 @@ Saved views are unique to you and do not display for other users in your organiz
 
 You can save custom findings configuration as a view to reapply at any time:
 
-1. Customize a findings layout.[^10]
+1. Customize a findings layout.[^11]
 
-   You can also apply filters or sorting before saving your view to include them in the view.[^11]
+   You can also apply filters or sorting before saving your view to include them in the view.[^12]
 
 {{< include /guide/model-inventory/_save-layout-view.qmd >}}
 
@@ -147,11 +153,11 @@ Deletion of saved views is permanent.
 
 [^5]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
-<!-- HERE -->
-
 [^6]: [Manage supporting documentation](add-manage-model-findings.qmd#manage-supporting-documentation)
 
-[^7]:
+[^7]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+
+[^8]:
 
    - [**[status]{.smallcaps}**](/guide/model-validation/manage-finding-types.qmd#manage-finding-type-statuses)
    - [**[model inventory]{.smallcaps}**](/guide/model-inventory/working-with-model-inventory.qmd)
@@ -160,10 +166,10 @@ Deletion of saved views is permanent.
    - **[severity]{.smallcaps}**
    - **[assigned to]{.smallcaps}**
 
-[^8]: [Manage model finding fields](manage-model-finding-fields.qmd)
+[^9]: [Manage model finding fields](manage-model-finding-fields.qmd)
 
-[^9]: [Manage custom findings views](#manage-custom-findings-views)
+[^10]: [Manage custom findings views](#manage-custom-findings-views)
 
-[^10]: [Customize model findings layout](#customize-model-findings-layout)
+[^11]: [Customize model findings layout](#customize-model-findings-layout)
 
-[^11]: [Filter and sort model findings](#filter-and-sort-model-findings)
+[^12]: [Filter and sort model findings](#filter-and-sort-model-findings)
