Edit: Customize model findings layout

--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -102,13 +102,19 @@ Customize what is displayed on your list of all model findings:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model findings.
 
-2. Click **{{< fa table >}} Manage Columns**.
+2. Select a finding type[^9] to view from the tabs:
+
+   - Validation Issues
+   - Policy Exception
+   - Model Limitation
+
+3. Click **{{< fa table >}} Manage Columns**.
 
    - Search for a column name in the list to narrow down results.
    - Toggle visibility for each item and drag each option to change the order.
-   - Available columns are determined by your model finding fields.[^9]
+   - Available columns are determined by your model finding fields.[^10]
 
-Once customized, you can save a view for later application.[^10]
+Once customized, you can save a view for later application.[^11]
 
 ### Manage custom findings views
 
@@ -122,9 +128,9 @@ Saved views are unique to you and do not display for other users in your organiz
 
 You can save custom findings configuration as a view to reapply at any time:
 
-1. Customize a findings layout.[^11]
+1. Customize a findings layout.[^12]
 
-   You can also apply filters or sorting before saving your view to include them in the view.[^12]
+   You can also apply filters or sorting before saving your view to include them in the view.[^13]
 
 {{< include /guide/model-inventory/_save-layout-view.qmd >}}
 
@@ -166,10 +172,12 @@ Deletion of saved views is permanent.
    - **[severity]{.smallcaps}**
    - **[assigned to]{.smallcaps}**
 
-[^9]: [Manage model finding fields](manage-model-finding-fields.qmd)
+[^9]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
-[^10]: [Manage custom findings views](#manage-custom-findings-views)
+[^10]: [Manage model finding fields](manage-model-finding-fields.qmd)
 
-[^11]: [Customize model findings layout](#customize-model-findings-layout)
+[^11]: [Manage custom findings views](#manage-custom-findings-views)
 
-[^12]: [Filter and sort model findings](#filter-and-sort-model-findings)
+[^12]: [Customize model findings layout](#customize-model-findings-layout)
+
+[^13]: [Filter and sort model findings](#filter-and-sort-model-findings)
