--- a/site/guide/access/log-in-to-validmind.qmd
+++ b/site/guide/access/log-in-to-validmind.qmd
@@ -25,7 +25,7 @@ Log in to {{< var validmind.platform >}} to work with your model documentation, 
 - [Private network endpoints](#private-network-endpoints) — requires additional configuration
 
 ::: {.content-visible when-profile="docker"}
-Additionally, when deployed as {{< var validmind.customer >}} ({{< var vm.customer >}}), {{< var validmind.platform >}} can be accessed through an intranet URL that must be configured.
+Additionally, when deployed as {{< var validmind.customer >}} ({{< var vm.customer >}}), the platform can be accessed through an intranet URL that must be configured.
 :::
 
 ::: {.attn}
@@ -108,11 +108,14 @@ To configure and log in through a private link for your company VPC using a supp
 ::: {.content-visible when-profile="docker"}
 ## {{< var validmind.customer >}} ({{< var vm.customer >}})
 
+::: {.callout-important}
+Requires `VALIDMIND_URL` to be configured by your IT department.[^1]
+:::
+
 1. In a browser, navigate to [{{< var url.us1 >}}]({{< var url.us1 >}}).
 
-   ::: {.callout-important}
-   Requires `VALIDMIND_URL` to be set.[^1]
-   :::
+
+
 
 2. Choose one of the supported login options:
 
