Apply bug fix for Tachyons .fl issue and import as modular CSS

--- a/site/guide/monitoring/set-thresholds-and-alerts.qmd
+++ b/site/guide/monitoring/set-thresholds-and-alerts.qmd
@@ -23,7 +23,8 @@ Together, thresholds and notifications improve your visibility into model perfor
 
 To programmatically evaluate whether a metric passes specific criteria, use a custom function:
 
-```
+
+```python
 gini = 0.75
 
 thresholds = {
@@ -58,7 +59,7 @@ In this example:
 
 To flag whether a metric value meets performance criteria, set the `passed` value explicitly:
 
-```
+```python
 log_metric(
    key="Test Coverage",
    value=0.85,
