--- a/site/guide/access/log-in-to-validmind.qmd
+++ b/site/guide/access/log-in-to-validmind.qmd
@@ -17,12 +17,16 @@ aliases:
   - /guide/configuration/log-in-to-validmind.html
 ---
 
-Log in to our cloud-hosted {{< var validmind.platform >}} to work with your model documentation, prepare validation reports, or to configure {{< var vm.product >}} for your organization.
+Log in to {{< var validmind.platform >}} to work with your model documentation, prepare validation reports, perform model governance tasks, or to configure {{< var vm.product >}} for your organization.
 
 {{< var vm.product >}} supports the following methods for logging in:
 
 - [Public internet](#public-internet) — minimal configuration needed
 - [Private network endpoints](#private-network-endpoints) — requires additional configuration
+
+::: {.content-visible when-profile="docker"}
+Additionally, when deployed as {{< var validmind.customer >}} ({{< var vm.customer >}}), the platform can be accessed through an intranet URL that must be configured.
+:::
 
 ::: {.attn}
 
@@ -97,7 +101,30 @@ Once you have the necessary access, you can work with models and workflows and p
 
 To configure and log in through a private link for your company VPC using a supported service:
 
-
 :::{#private-networks}
 :::
 
+
+::: {.content-visible when-profile="docker"}
+## {{< var validmind.customer >}} ({{< var vm.customer >}})
+
+::: {.callout-important}
+Requires `VALIDMIND_URL` to be configured by your IT department.[^1]
+:::
+
+1. In a browser, navigate to [{{< var url.us1 >}}]({{< var url.us1 >}}).
+
+
+
+
+2. Choose one of the supported login options:
+
+   - Enter your email address and password, and click **Continue**.
+   - Select one of the supported single sign-on (SSO) login options, such as Google, GitHub, or Microsoft, and complete the login steps. 
+
+    After successful login, you will be redirected to the main dashboard of the {{< var validmind.platform >}}.
+:::
+
+<!-- FOOTNOTES -->
+
+[^1]: [Create a rebranded docs site](https://github.com/validmind/documentation?tab=readme-ov-file#create-a-rebranded-docs-site)
