--- a/site/guide/model-validation/_view-all-findings.qmd
+++ b/site/guide/model-validation/_view-all-findings.qmd
@@ -5,7 +5,7 @@ To view findings for all models:
 
 1. Select a finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] to view from the tabs:
 
-   - Validation Issues
+   - Validation Issue
    - Policy Exception
    - Model Limitation
 
@@ -38,7 +38,7 @@ To view findings for all models:
 
 1. Select a [finding type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} to view from the tabs:
 
-   - Validation Issues
+   - Validation Issue
    - Policy Exception
    - Model Limitation
 
