--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -45,19 +45,15 @@ When linking findings to validation reports,[^5] you can add findings as you ass
 
 3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.[^7]
 
-4. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report**.
+4. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report** and select the finding type[^8] you want to add:
 
-5. On the Link Finding to Report modal that opens, click **{{< fa plus >}} Create New Finding**.
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
 
-6. On the Add Model Finding modal that opens, provide information for:
+5. On the Link Finding to Report modal that opens, click **{{< fa plus >}} Add {x} Finding** where `{x}` is the type of finding.
 
-   - **[title]{.smallcaps}**
-   - **[risk area]{.smallcaps}**
-   - **[owner]{.smallcaps}**
-   - **[severity]{.smallcaps}**
-   - **[due date]{.smallcaps}**
-   - **[documentation section]{.smallcaps}**
-   - **[description]{.smallcaps}**
+6. On the Add Model Finding modal that opens, provide information for your finding.
 
 7. When you are done, click **Save** to submit the finding.
 
@@ -65,13 +61,13 @@ When linking findings to validation reports,[^5] you can add findings as you ass
 
 As findings get resolved or require other changes during the model validation process, you can update them:
 
-1. Locate the finding you want to update.[^8]
+1. Locate the finding you want to update.[^9]
 
 2. Click on a field to make changes. You can make updates to:
 
    - **[title]{.smallcaps}** and **Description**
    - **Proposed Remediation Plan**
-   - **[attachments]{.smallcaps}**[^9]
+   - **[attachments]{.smallcaps}**[^10]
    - **[status]{.smallcaps}**
    - **[severity]{.smallcaps}**
    - **[risk area]{.smallcaps}**
@@ -114,14 +110,14 @@ Uploaded files must be less than 50 MB each in size.
 ## Delete model findings
 
 ::: {.callout-important title="Finding deletion is permanent."}
-- While finding deletion will be logged under your {{< fa wifi >}} Model Activity,[^10] deleted findings cannot be retrieved.
-- Deleting a finding will also remove it from any validation reports[^11] it was previously attached to.
+- While finding deletion will be logged under your {{< fa wifi >}} Model Activity,[^11] deleted findings cannot be retrieved.
+- Deleting a finding will also remove it from any validation reports[^12] it was previously attached to.
 
 :::
 
 If you logged a finding in error or otherwise no longer need to track that finding, you can delete it:
 
-1. Locate the finding you want to delete.[^12]
+1. Locate the finding you want to delete.[^13]
 
 2. On the finding's detail page, click **{{< fa trash-can>}} Delete Finding** in the right sidebar.
 
@@ -146,12 +142,14 @@ If you logged a finding in error or otherwise no longer need to track that findi
 
 [^7]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^8]: [View and filter model findings](view-filter-model-findings.qmd)
+[^8]: [Manage finding types](manage-finding-types.qmd)
 
-[^9]: [Manage supporting documentation](#manage-supporting-documentation)
+[^9]: [View and filter model findings](view-filter-model-findings.qmd)
 
-[^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+[^10]: [Manage supporting documentation](#manage-supporting-documentation)
 
-[^11]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
+[^11]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
-[^12]: [View and filter model findings](view-filter-model-findings.qmd)
+[^12]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
+
+[^13]: [View and filter model findings](view-filter-model-findings.qmd)
