--- a/site/guide/model-validation/manage-finding-types.qmd
+++ b/site/guide/model-validation/manage-finding-types.qmd
@@ -11,7 +11,7 @@ Prepare to track the progress and resolution of findings by customizing finding 
 
 By default, the {{< var validmind.platform >}} provides three finding types:
 
-Validation Issues
+Validation Issue
 : Problems discovered during model validation that reflect errors, inconsistencies, or gaps in data, methodology, implementation, or documentation that need to be addressed before the model is considered reliable.
 
 Policy Exception
@@ -37,7 +37,7 @@ Model Limitation
 
 3. Click on the finding type[^2] you want to edit:
 
-    - Validation Issues
+    - Validation Issue
     - Policy Exception
     - Model Limitation
 
