--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -38,7 +38,7 @@ To view findings linked to a specific model:
 
 4. Select a finding type[^5] to view from the tabs:
 
-   - Validation Issues
+   - Validation Issue
    - Policy Exception
    - Model Limitation
 
@@ -74,7 +74,7 @@ To narrow down the findings, you can apply some filters:
 
 2. Select a finding type[^7] to view from the tabs:
 
-   - Validation Issues
+   - Validation Issue
    - Policy Exception
    - Model Limitation
 
@@ -104,7 +104,7 @@ Customize what is displayed on your list of all model findings:
 
 2. Select a finding type[^9] to view from the tabs:
 
-   - Validation Issues
+   - Validation Issue
    - Policy Exception
    - Model Limitation
 
