--- a/site/guide/model-validation/_add-finding-via-overview.qmd
+++ b/site/guide/model-validation/_add-finding-via-overview.qmd
@@ -4,15 +4,9 @@ To log a finding from the documentation overview:
 
 a. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
-a. On the Add Model Finding modal that opens, provide information for: 
+a. Select the finding type you want to add.^[[Manage finding types](manage-finding-types.qmd)]
 
-   - **[title]{.smallcaps}**
-   - **[risk area]{.smallcaps}**
-   - **[owner]{.smallcaps}**
-   - **[severity]{.smallcaps}**
-   - **[due date]{.smallcaps}**
-   - **[documentation section]{.smallcaps}**
-   - **[description]{.smallcaps}**
+a. On the Add Model Finding modal that opens, provide information for your finding.
 
 a. When you are done, click **Save** to submit the finding. 
 
@@ -25,15 +19,9 @@ To log a finding from the documentation overview:
 
 a. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
-a. On the Add Model Finding modal that opens, provide information for: 
+a. Select the [finding type](manage-finding-types.qmd) you want to add.
 
-   - **[title]{.smallcaps}**
-   - **[risk area]{.smallcaps}**
-   - **[owner]{.smallcaps}**
-   - **[severity]{.smallcaps}**
-   - **[due date]{.smallcaps}**
-   - **[documentation section]{.smallcaps}**
-   - **[description]{.smallcaps}**
+a. On the Add Model Finding modal that opens, provide information for your finding.
 
 a. When you are done, click **Save** to submit the finding. 
 
