--- a/site/guide/model-validation/_add-finding-via-section.qmd
+++ b/site/guide/model-validation/_add-finding-via-section.qmd
@@ -5,19 +5,11 @@ a. Click on **{{< var vm.product >}} Insights™** to expand the insight panel.
 
 a. For the section you want to add a Finding for, click **{{< fa plus >}} Add Model Finding** beneath the Documentation Guidelines.
 
-a. On the Add Model Finding modal that opens, provide information for: 
+a. Select the finding type you want to add.^[[Manage finding types](manage-finding-types.qmd)]
 
-   - **[title]{.smallcaps}**
-   - **[risk area]{.smallcaps}**
-   - **[owner]{.smallcaps}**
-   - **[severity]{.smallcaps}**
-   - **[due date]{.smallcaps}**
-   - **[documentation section]{.smallcaps}**
-   - **[description]{.smallcaps}**
+a. On the Add Model Finding modal that opens, provide information for your finding.
 
    The **[documentation section]{.smallcaps}** will be auto-populated with the section you are working from — you are able to select another section if desired.
-
-   ![Adding a finding with the {{< var vm.product >}} Insights™ panel](add-section-finding.gif){fig-alt="An animated gif demonstrating how to add a finding with the ValidMind Insights™ panel" .screenshot}
 
 a. When you are done, click **Save** to submit the finding. 
 
@@ -33,19 +25,13 @@ a. Click on **{{< var vm.product >}} Insights™** to expand the insight panel.
 
 a. For the section you want to add a Finding for, click **{{< fa plus >}} Add Model Finding** beneath the Documentation Guidelines.
 
-a. On the Add Model Finding modal that opens, provide information for: 
+a. Select the [finding type](manage-finding-types.qmd) you want to add.
 
-   - **[title]{.smallcaps}**
-   - **[risk area]{.smallcaps}**
-   - **[owner]{.smallcaps}**
-   - **[severity]{.smallcaps}**
-   - **[due date]{.smallcaps}**
-   - **[documentation section]{.smallcaps}**
-   - **[description]{.smallcaps}**
-   
+a. On the Add Model Finding modal that opens, provide information for your finding.
+
    The **[documentation section]{.smallcaps}** will be auto-populated with the section you are working from — you are able to select another section if desired.
 
-a. When you are done, click **Save** to submit the finding. 
+a. When you are done, click **Save** to submit the finding.
 
    Once created, you can then [add supporting documentation to your finding](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation){target="_blank"}.
 
