--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -5,7 +5,7 @@ aliases:
   - add-update-model-findings.html
 ---
 
-Add findings within the {{< var validmind.platform >}} at the model or documentation section level, update your findings to include proposed remediation plans and supporting documentation, or delete findings that no longer need to be tracked.
+Add findings at the model or documentation section level, update your findings to include proposed remediation plans and supporting documentation, or delete findings that no longer need to be tracked.
 
 ::: {.attn}
 
