--- a/site/guide/model-validation/_add-finding-via-overview.qmd
+++ b/site/guide/model-validation/_add-finding-via-overview.qmd
@@ -4,7 +4,11 @@ To log a finding from the documentation overview:
 
 a. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
-a. Select the finding type you want to add.^[[Manage finding types](manage-finding-types.qmd)]
+a. Select the finding type^[[Manage finding types](manage-finding-types.qmd)] you want to add:
+
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
 
 a. On the Add Model Finding modal that opens, provide information for your finding.
 
@@ -19,7 +23,11 @@ To log a finding from the documentation overview:
 
 a. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
-a. Select the [finding type](manage-finding-types.qmd) you want to add.
+a. Select the [finding type](manage-finding-types.qmd) you want to add:
+
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
 
 a. On the Add Model Finding modal that opens, provide information for your finding.
 
