--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -63,21 +63,13 @@ As findings get resolved or require other changes during the model validation pr
 
 1. Locate the finding you want to update.[^9]
 
-2. Click on a field to make changes. You can make updates to:
-
-   - **[title]{.smallcaps}** and **Description**
-   - **Proposed Remediation Plan**
-   - **[attachments]{.smallcaps}**[^10]
-   - **[status]{.smallcaps}**
-   - **[severity]{.smallcaps}**
-   - **[risk area]{.smallcaps}**
-   - **[due date]{.smallcaps}**
-   - **[assigned to]{.smallcaps}**
-   - **[documentation section]{.smallcaps}**
+2. Click on a field to make changes.
 
    You can also add comments to a finding.
 
-Most updates are applied immediately but you must click **Save** to make changes to the finding title, description, proposed remediation plan, and attachments effective. 
+   ::: {.callout}
+   Most updates are applied immediately but you must click **Save** to make changes to the finding title, description, proposed remediation plan, and attachments effective.
+   :::
 
 ### Track issue resolution
 
