--- a/site/guide/model-validation/_add-finding-via-section.qmd
+++ b/site/guide/model-validation/_add-finding-via-section.qmd
@@ -5,7 +5,11 @@ a. Click on **{{< var vm.product >}} Insights™** to expand the insight panel.
 
 a. For the section you want to add a Finding for, click **{{< fa plus >}} Add Model Finding** beneath the Documentation Guidelines.
 
-a. Select the finding type you want to add.^[[Manage finding types](manage-finding-types.qmd)]
+a. Select the finding type^[[Manage finding types](manage-finding-types.qmd)] you want to add:
+
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
 
 a. On the Add Model Finding modal that opens, provide information for your finding.
 
@@ -25,7 +29,11 @@ a. Click on **{{< var vm.product >}} Insights™** to expand the insight panel.
 
 a. For the section you want to add a Finding for, click **{{< fa plus >}} Add Model Finding** beneath the Documentation Guidelines.
 
-a. Select the [finding type](manage-finding-types.qmd) you want to add.
+a. Select the [finding type](manage-finding-types.qmd) you want to add:
+
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
 
 a. On the Add Model Finding modal that opens, provide information for your finding.
 
