Updating training slides

--- a/site/guide/model-validation/_add-finding-via-overview.qmd
+++ b/site/guide/model-validation/_add-finding-via-overview.qmd
@@ -4,7 +4,7 @@ To log a finding from the documentation overview:
 
 a. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
-a. Select the finding type^[[Manage finding types](manage-finding-types.qmd)] you want to add:
+a. Select the finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] you want to add:
 
    - Validation Issue
    - Policy Exception
@@ -23,7 +23,7 @@ To log a finding from the documentation overview:
 
 a. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
-a. Select the [finding type](manage-finding-types.qmd) you want to add:
+a. Select the [finding type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} you want to add:
 
    - Validation Issue
    - Policy Exception
