--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -356,8 +356,8 @@ As we can observe from the output in our notebook, our champion model doesn't pa
 1. Select the name of your model you registered for this course to open up the model details page.
 2. In the left sidebar that appears for your model, click **Validation Report** under {{< fa file >}} Documents.
 3. Locate the Data Preparation section and click on **2.2.2. Model Performance** to expand that section.
-4. Under the Model Performance Metrics section, locate Findings then click **Link Finding to Report**.
-5. Click **{{< fa plus >}} Create New Finding** to add a finding.
+4. Under the Model Performance Metrics section, locate Findings then click **Link Finding to Report** and select **Validation Issue**.
+5. Click **{{< fa plus >}} Add Validation Issue Finding** to add a finding.
 6. Enter in the details for your finding and click **Save**.
 7. Select the finding you just added to link to your validation report.
 8. Click **Update Linked Findings** to insert your finding.
