--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -303,7 +303,7 @@ Along with adding findings directly via validation reports, you can also add fin
 
 1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Documentation** under {{< fa file >}} Documents.
-3. Click **{{< fa plus >}} Add Finding** to add a finding from the overview.
+3. Click **{{< fa plus >}} Add Model Finding** to add a finding from the overview.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
