--- a/site/guide/model-validation/_link-findings-to-reports.qmd
+++ b/site/guide/model-validation/_link-findings-to-reports.qmd
@@ -5,11 +5,11 @@
 
 1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file under Documents.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
-   Expand any subsection of the validation report you would like to work with.
+1. Expand any subsection of the validation report you would like to work with.
 
    For example, locate 2. Validation then select **2.1.1. Assumptions**.
 
-1. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report** and select the finding type^[[Manage finding types](manage-finding-types.qmd)] you want to add:
+1. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report** and select the finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] you want to add:
 
    - Validation Issue
    - Policy Exception
@@ -37,7 +37,7 @@
 
     ![Validation report with the link finding option highlighted](/notebooks/tutorials/model_validation/link-finding.png){width=90% fig-alt="Screenshot showing the validation report with the link finding option highlighted" .screenshot}
 
-1. Select **Validation Issue** as the type of finding.
+1. Select **Validation Issue** as the [type of finding](/guide/model-validation/manage-finding-types.qmd){target="_blank"}.
 
 1. Click **{{< fa plus >}} Add Validation Issue Finding** to add a finding.
 
