Small update to User Action

--- a/site/guide/model-workflows/_workflow-step-types.qmd
+++ b/site/guide/model-workflows/_workflow-step-types.qmd
@@ -34,6 +34,7 @@ Creates a button that performs an action on behalf of the user.
 | [display action button when]{.smallcaps}  (optional) | Add conditional requirements for displaying this step.^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]  |
 | [action button label]{.smallcaps} | Text that displays on your action button. |
 | [request fields]{.smallcaps} (optional) | Include required inventory fields alongside your action.[^step-types-1]  |
+| [optional fields]{.smallcaps} (optional) | Include optional inventory fields alongside your action.[^step-types-1]  |
 : **{{< fa arrow-pointer >}} User Action v2** step configuration {.hover tbl-colwidths="[40,60]"}
 
 #### {{< fa users >}} Approval
@@ -123,6 +124,9 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 
     - Select the field, then click **{{< fa plus >}} Add Field** to insert.
     - [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+
+    Users must have write permissions for the field in order to enter values.
+
 
 [^step-types-2]: **[Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd#create-custom-workflows):**<br><br>
 
