Add bubbles to review findings section

--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -80,7 +80,11 @@ The system analyzes your documentation, identifies gaps, and generates recommend
 
 ### Review the findings
 
-1. After the {{< var validmind.checker >}} has completed its analysis, expand individual questions or click **Expand All** to look through the findings.
+1. After the {{< var validmind.checker >}} has completed its analysis, expand individual questions or click **Expand All** to look through the findings:
+
+- [Gap Identified]{.bubble .red-b .red-bg} — A question that is not addressed.
+- [Partial Gap]{.bubble .yellow-bg} — A question that is partially addressed.
+- [No Significant Gaps]{.bubble .green-bg} — A question that is fully addressed.
 
 2. Each question includes:
 
