--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -82,9 +82,11 @@ The system analyzes your documentation, identifies gaps, and generates recommend
 
 1. After the {{< var validmind.checker >}} has completed its analysis, expand individual questions or click **Expand All** to look through the findings:
 
-- [Gap Identified]{.bubble .red-b .red-bg} — A question that is not addressed.
-- [Partial Gap]{.bubble .yellow-bg} — A question that is partially addressed.
-- [No Significant Gaps]{.bubble .green-bg} — A question that is fully addressed.
+::: {.pl4}
+[Gap Identified]{.bubble .red-b .red-bg} — A question that is not addressed and requires attention.<br>
+[Partial Gap]{.bubble .yellow-bg} — A question that is partially addressed and requires attention.<br>
+[No Significant Gaps]{.bubble .green-bg} — A question that is fully addressed.
+:::
 
 2. Each question includes:
 
