Revert validation report docs changes as not available && edits

--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -14,7 +14,7 @@ aliases:
   - /guide/model-documentation/check-documents-for-compliance.html
 ---
 
-Use the {{< var validmind.checker >}} to analyze your completed model documentation or validation report by comparing it against regulatory standards. 
+Use the {{< var validmind.checker >}} to analyze your completed model documentation by comparing it against regulatory standards. 
 
 ## What is the {{< var validmind.checker >}}?
 
@@ -37,7 +37,7 @@ The {{< var validmind.checker >}} is a compliance tool that reviews technical do
 
 ::::
 
-As a compliance tool, the {{< var vm.checker >}} is most useful when your model documentation or validation report is sufficiently complete and you are preparing models for regulatory submission or internal audit, as it helps reduce manual review effort and improve quality assurance. 
+As a compliance tool, the {{< var vm.checker >}} is most useful when your model documentation is sufficiently complete and you are preparing models for regulatory submission or internal audit, as it helps reduce manual review effort and improve quality assurance. 
 
 Supported regulations include:
 
