--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -19,7 +19,6 @@ listing:
     fields: [title, description]
     contents:
       - ../model-documentation/collaborate-with-others.qmd
-      - ../model-documentation/check-documentation-for-compliance.qmd
       - ../model-documentation/submit-for-approval.qmd
 aliases:
   - /guide/preparing-validation-reports.html
@@ -109,7 +108,7 @@ Complete your validation report by reviewing submitted model documentation and a
 :::{#draft-reports}
 :::
 
-Collaborate with other stakeholders, check your report for compliance, and submit your work for approval:
+Collaborate with other stakeholders and submit your work for approval:
 
 :::{#complete-reports}
 :::
