Update screenshot, text edits

--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -44,7 +44,7 @@ Supported regulations include:
 - Federal Reserve Supervisory Letter SR 11-7 (United States)
 - Bank of England Prudential Regulation Authority (PRA) Supervisory Statement SS1/23 (United Kingdom)
 - Office of the Superintendent of Financial Institutions (OSFI) Guideline E-23 (Canada)
-- European Union Artificial Intelligence Act (EU AI Act)
+- European Union Artificial Intelligence Act (Regulation (EU) 2024/1689, EU AI Act)
 
 ::: {.attn}
 
