--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -88,12 +88,16 @@ The system analyzes your documentation, identifies gaps, and generates recommend
 [No Significant Gaps]{.bubble .green-bg} — A question that is fully addressed.
 :::
 
-2. Each question includes:
+2. Review questions that require attention. Each question includes:
 
      - **Finding** — An analysis of how the documentation currently addresses the question
      - **Recommendation** — If suggested, guidance on how to revise the documentation to better address the question
 
-   ![Review the finding and recommendation for each question](/guide/model-documentation/check-documents-for-compliance-review.png){fig-alt="A screenshot showing the findings and recommendation made by the checker" .screenshot}
+   ![Sample question that is not addressed](/guide/model-documentation/check-documents-for-compliance-gap-identified.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
+
+   ![Sample question that is partially addressed](/guide/model-documentation/check-documents-for-compliance-partial-gap.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
+
+   ![Sample question that is fully addressed](/guide/model-documentation/check-documents-for-compliance-no-significant-gaps.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'No significant gaps.' with a recommendation to add a policy paragraph." .screenshot}
 
 Use the feedback provided by the {{< var validmind.checker >}} to review the appropriate sections of your documentation and decide what revisions should be made. Or, if you have run the {{< var vm.checker >}} before and were just checking that all documentation issues have been addressed, submit your model for validation.
 
